Added open-source code in footer

--- a/index.html
+++ b/index.html
@@ -131,6 +131,15 @@
       </div>
       <div class="weatherimg"><img src="images/weather.svg" alt="" /></div>
     </div>
+    <br />
+    <footer>
+      <p>
+        <a href="https://github.com/KariinDeLeeuw/wheater-app" target="_blank"
+          >Open-source code
+        </a>
+        by Karin de Leeuw
+      </p>
+    </footer>
     <script src="/src/script.js"></script>
   </body>
 </html>
