Submitted HTML weather condition and changed CSS
Submitted HTML weather condition, deleted last image and changed CSS.

--- a/index.html
+++ b/index.html
@@ -51,10 +51,15 @@
           <div class="col">
             <h2>
               <span id="currentTemp"></span>
-              <!-- <a href="" id="celcius-link">Current</a> -->
-              <!-- <a href="" id="fahrenheit-link">°F</a> -->
+              <!-- <a href="" id="celcius-link">Current</a>
+              <a href="" id="fahrenheit-link">°F</a> -->
             </h2>
             <h2><i class="fas fa-temperature-high"></i></h2>
+          </div>
+          <div class="col" id="conditions">
+            <p>Clear sky</p>
+            <p>Humidity</p>
+            <p>Wind</p>
           </div>
           <div class="col">
             <p><i class="fas fa-sun"></i></p>
@@ -75,61 +80,60 @@
       <div class="weekweather">
         <div class="row align-items-start">
           <div class="col">
-            <h4>Monday</h4>
+            <h5>Monday</h5>
           </div>
           <div class="col">
-            <h4><i class="fas fa-sun"></i></h4>
+            <h5><i class="fas fa-sun"></i></h5>
           </div>
           <div class="col">
-            <h4>24°</h4>
-          </div>
-        </div>
-        <div class="row align-items-start">
-          <div class="col">
-            <h4>Tuesday</h4>
-          </div>
-          <div class="col">
-            <h4><i class="fas fa-cloud-sun"></i></h4>
-          </div>
-          <div class="col">
-            <h4>19°</h4>
+            <h5>24°</h5>
           </div>
         </div>
         <div class="row align-items-start">
           <div class="col">
-            <h4>Wednesday</h4>
+            <h5>Tuesday</h5>
           </div>
           <div class="col">
-            <h4><i class="fas fa-cloud-sun-rain"></i></h4>
+            <h5><i class="fas fa-cloud-sun"></i></h5>
           </div>
           <div class="col">
-            <h4>19°</h4>
-          </div>
-        </div>
-        <div class="row align-items-start">
-          <div class="col">
-            <h4>Thursday</h4>
-          </div>
-          <div class="col">
-            <h4><i class="fas fa-cloud-showers-heavy"></i></h4>
-          </div>
-          <div class="col">
-            <h4>17°</h4>
+            <h5>19°</h5>
           </div>
         </div>
         <div class="row align-items-start">
           <div class="col">
-            <h4>Friday</h4>
+            <h5>Wednesday</h5>
           </div>
           <div class="col">
-            <h4><i class="fas fa-sun"></i></h4>
+            <h5><i class="fas fa-cloud-sun-rain"></i></h5>
           </div>
           <div class="col">
-            <h4>17°</h4>
+            <h5>19°</h5>
+          </div>
+        </div>
+        <div class="row align-items-start">
+          <div class="col">
+            <h5>Thursday</h5>
+          </div>
+          <div class="col">
+            <h5><i class="fas fa-cloud-showers-heavy"></i></h5>
+          </div>
+          <div class="col">
+            <h5>17°</h5>
+          </div>
+        </div>
+        <div class="row align-items-start">
+          <div class="col">
+            <h5>Friday</h5>
+          </div>
+          <div class="col">
+            <h5><i class="fas fa-sun"></i></h5>
+          </div>
+          <div class="col">
+            <h5>17°</h5>
           </div>
         </div>
       </div>
-      <div class="weatherimg"><img src="images/weather.svg" alt="" /></div>
     </div>
     <br />
     <footer>
