--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <div class="currentweather">
         <div class="row">
           <div class="col">
+            <p>Last updated:</p>
             <h3 id="currentDay">Sunday</h3>
             <h3 id="currentTime">15:12</h3>
           </div>
