Added weather icon and made weather description generic

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="currentweather">
         <div class="row">
           <div class="col">
-            <p>Last updated</p>
+            <p>Last updated:</p>
             <h3 id="currentDay">Sunday</h3>
             <h3 id="currentTime">15:12</h3>
           </div>
@@ -58,12 +58,12 @@
             <h2><i class="fas fa-temperature-high"></i></h2>
           </div>
           <div class="col" id="conditions">
-            <p>Clear sky</p>
-            <p>Humidity</p>
-            <p>Wind</p>
+            <p id="description"></p>
+            <p>Humidity: <span id="humid"></span></p>
+            <p>Wind: <span id="wind"></span></p>
           </div>
           <div class="col">
-            <p><i class="fas fa-sun"></i></p>
+            <p><img id="icon" src="" alt="" /></p>
           </div>
         </div>
       </div>
