Made a 5 days forecast and changed the css of it.

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           </div>
         </div>
       </div>
-      <div class="weekweather">
-        <div class="row align-items-start">
+      <div class="weekweather" id="weekweather">
+        <!-- <div class="row align-items-start">
           <div class="col">
             <h5>Monday</h5>
           </div>
@@ -133,7 +133,7 @@
           <div class="col">
             <h5>17°</h5>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <br />
