Implemented the unit conversion

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
           <div class="col">
             <h2>
               <span id="currentTemp"></span>
-              <!-- <a href="" id="celcius-link">Current</a>
-              <a href="" id="fahrenheit-link">°F</a> -->
+              <span class="units">
+                <a href="" id="celciusLink" class="active">°C</a> |
+                <a href="" id="fahrenheitLink">°F</a>
+              </span>
             </h2>
             <h2><i class="fas fa-temperature-high"></i></h2>
           </div>
